--- a/20230617/CSS/style.css
+++ b/20230617/CSS/style.css
@@ -1,41 +1,123 @@
 @charset "utf-8";
 
+/* cssリセット */
+
+/*利用するタグによってこちらの内容は増やす*/
+
+html,
+body,
+h1,
+h2,
+h3,
+p,
+dl,
+dt,
+dd,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    /*デフォルトの文字色、font-familyを予め当てておく*/
+    color: #000;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
+        "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+}
+
+a {
+    /*下線を消す*/
+    text-decoration: none;
+    /*色を消す*/
+    color: inherit;
+}
+
 ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /*左の「・」を消す*/
     list-style: none;
-    max-width: 960px;
-    margin: 0 auto;
-    padding-left: 0;
 }
 
-ul li {
-    padding: 0 20px;
-    background: gray;
+img {
+    max-width: 100%;
+    vertical-align: bottom;
+    border: none;
 }
 
-.wrap {
+/* --------  ここから課題  -------- */
+
+/* work1-1 */
+.wrap_01 {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    width: 980px;
-    margin: 0 auto;
+    width: 960px;
+    margin: 0 auto 50px;
 }
 
-.wrap div {
+.wrap_01 div {
+    width: 300px;
+    height: 300px;
+    background: blue;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    height: 300px;
-    margin-bottom: 20px;
-    background: orange;
     color: #fff;
 }
 
+/* work1-2 */
+.wrap_02 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 960px;
+    margin: 0 auto;
+}
+
+.wrap_02 div {
+    width: 30%;
+    height: 300px;
+    background: red;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+/* work1-3 */
+.flex_header {
+    display: flex;
+    justify-content: space-between;
+    width: 960px;
+    margin: 0 auto;
+}
+.flex_list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.flex_list li {
+    border-right: 1px solid #000;
+    padding: 0 20px;
+}
+.flex_list li:last-child {
+    border-right: none;
+    padding-right: 0px;
+}
+
 @media screen and (max-width: 767px) {
-    .wrap {
+    .flex_header {
         display: block;
+        padding: 20px;
+        width: 100%;
+    }
+    h1 {
+        margin-bottom: 20px;
+    }
+    .flex_list {
+        display: block;
+    }
+    .flex_list li {
+        border-right: none;
+        border-bottom: 1px solid #000;
+        padding: 15px 0;
     }
 }
